security/policies/tests/invalid-latest-ephemeralcontainer-notag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ephemeralcontainer-no-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
  ephemeralContainers:
    - name: debug
      image: busybox
