security/policies/tests/invalid-latest-ephemeralcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ephemeralcontainer-latest-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
  ephemeralContainers:
    - name: debug
      image: busybox:latest
