security/policies/tests/invalid-latest-initcontainer-notag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-initcontainer-no-tag
  namespace: default
spec:
  initContainers:
    - name: init
      image: busybox
  containers:
    - name: test
      image: nginx:1.27.3
