security/policies/tests/invalid-latest-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-initcontainer-latest-tag
  namespace: default
spec:
  initContainers:
    - name: init
      image: busybox:latest
  containers:
    - name: test
      image: nginx:1.27.3
