security/policies/tests/invalid-latest-notag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx
