security/policies/tests/invalid-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-latest-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:latest
