security/policies/tests/invalid-privileged-ephemeralcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ephemeralcontainer-privileged
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
      securityContext:
        privileged: false
  ephemeralContainers:
    - name: debug
      image: busybox:1.36.1
      securityContext:
        privileged: true
