security/policies/tests/invalid-privileged-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-initcontainer-privileged
  namespace: default
spec:
  initContainers:
    - name: init
      image: busybox:1.36.1
      securityContext:
        privileged: true
  containers:
    - name: test
      image: nginx:1.27.3
      securityContext:
        privileged: false
