security/policies/tests/invalid-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
      securityContext:
        privileged: true
