security/policies/tests/valid-latest-ephemeralcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ephemeralcontainer-pinned-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
  ephemeralContainers:
    - name: debug
      image: busybox:1.36.1
