security/policies/tests/valid-latest-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-initcontainer-pinned-tag
  namespace: default
spec:
  initContainers:
    - name: init
      image: busybox:1.36.1
  containers:
    - name: test
      image: nginx:1.27.3
