security/policies/tests/valid-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pinned-tag
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.27.3
